# FoodiePlanner

./: README.md  compile_app.bat  pyproject.toml  requirements.txt  tests.bat  tests.sh
.github/workflows/: python-testing.yml
src/: main.py  model.py
src/cliqual/: cliqual_api.py
src/cliqual/data/XML_2020_07_07/: alim.xml  alim_grp.xml  const.xml
src/common/: logo.xcf
src/cookbook/: cookbook.py  cookbook_api.py
src/cookbook/data/recipes/: omelette_aux_champignons.xml  pates_au_pesto.xml
src/foodie_planner/CliqualAPI/data/XML_2020_07_07/: alim.xml
src/foodie_planner/CliqualAPI/src/: cliqual_api.py
tests/: test_cliqual_api.py  test_cookbook_api.py
