[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "foodie_planner"
version = "0.0.1"
authors = [
  { name="Laura Bouzereau", email="laurabouzereau@hotmail.fr" },
]
description = "A meal planning tool to help you stay healthy with food"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/LadyCookie/FoodiePlanner"
Issues = "https://github.com/LadyCookie/FoodiePlanner/issues"